Update vercel.json to use public output directory

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,8 +1,9 @@
 {
   "version": 2,
+  "outputDirectory": "public",
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/api/(.*)",
       "destination": "/api/index"
     }
   ]
